--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">ű
     <link rel="stylesheet" href="style.css">
     <title>sasOS</title>
     <script>
@@ -13,8 +14,133 @@
         }
     </script>
 </head>
+
 <body>
-    <button class="darkbutton" onclick="darkMode()">🌙</button>
-    <h1>sasOS dokumentáció</h1>
+    <table class="mod">
+        <th>Moderálás</th>
+        <tr>
+            <td class="alcim">Egyszerűen kezelhető moderálási parancsok, korábbi eljárások mentése</td>
+        </tr>
+        <tr>
+            <td><img src="https://i.imgur.com/U2oddx6.gif" alt="Ban parancs működése"></td>
+        </tr>
+        <tr>
+            <td class="parancs">Ban ● Kick ● Warn ● Timeout ● Clear ● Lockdown</td>
+        </tr>
+        <tr>
+            <td class="parancs">Unban ● Removetimeout ● Unlockdown</td>
+        </tr>
+        <tr>
+            <td class="parancs utolso">Logs ● Bans ● Kicks ● Timeouts ● Warns</td>
+        </tr>
+    </table>
+
+    <table class="music">
+        <th>Zenehallgatás</th>
+        <tr>
+            <td class="alcim">Zenék lejátszása könnyedén több száz oldalról</td>
+        </tr>
+        <tr>
+            <td><img src="https://i.imgur.com/Dd8qhTo.gif" alt="Play parancs működése"></td>
+        </tr>
+        <tr>
+            <td class="felsorol">Zenék indítása, keresése - Play ● Search</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Ranghoz, csatornához kötés - DJRole ● Zenecsatorna</td>
+        </tr>
+        <tr>
+            <td class="parancs">Seek ● Loop ● Pause/Resume ● Volume ● Lyrics ● Filter ● Stop</td>
+        </tr>
+        <tr>
+            <td class="parancs utolso">Queue ● Clearqueue ● Skip ● Previous ● Remove ● Shuffle ● Autoplay</td>
+        </tr>
+    </table>
+
+    <table class="custom">
+        <th>Testreszabás</th>
+        <tr>
+            <td class="alcim">Egyedi funkciók hozzáadása a szerveredhez</td>
+        </tr>
+        <tr>
+            <td><img src="https://i.imgur.com/smM9Ftb.gif" alt="Egyedi parancsok hozzáadása"></td>
+        </tr>
+        <tr>
+            <td class="felsorol">Egyedi parancsok létrehozása - Customcommand</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Felhasználók számlálása - Membercounter</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Rangok automatikus adása - Autoroles</td>
+        </tr>
+        <tr>
+            <td class="felsorol utolso">Üdvözlő és Búcsúzó üzenet - Welcome ● Farewell</td>
+        </tr>
+    </table>
+
+    <table class="config">
+        <th>Konfigurálás</th>
+        <tr>
+            <td class="alcim">Szabd testre, hogyan viselkedjen sasOS a szervereden</td>
+        </tr>
+        <tr>
+            <td><img src="https://i.imgur.com/vkpbGUo.gif" alt="Új prefix hozzáadása"></td>
+        </tr>
+        <tr>
+            <td class="felsorol">Prefix megváltoztatása - Prefix</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Parancsok átnevezése - Alias</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Parancsok kikapcsolása - Toggle</td>
+        </tr>
+        <tr>
+            <td class="felsorol utolso">Parancsok rangokhoz kötése - Permissions</td>
+        </tr>
+    </table>
+
+    <table class="misc">
+        <th>Ezenfelül</th>
+        <tr>
+            <td class="alcim">További, mindenféle parancsok</td>
+        </tr>
+        <tr>
+            <td><img src="https://i.imgur.com/UWrnRDQ.gif" alt="Információk adott felhasználóról"></td>
+        </tr>
+        <tr>
+            <td class="felsorol">Információk a szerverről, felhasználókról - Serverinfo ● Userinfo</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Profilképek különböző felbontásokban - Avatar</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Youtube videónézés és játékok indítása - Activities</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Szavazások létrehozása - Szavazás</td>
+        </tr>
+        <tr>
+            <td class="felsorol">Szövegek átalakítása - ASCII ● Emojify ● Replace</td>
+        </tr>
+        <tr>
+            <td class="felsorol utolso">És további hasonló parancsok!</td>
+        </tr>
+    </table>
+
+    <table>
+        <th>Egyéb tudnivalók</th>
+        <tr>
+            <td class="felsorol">Rendszeres frissítések, új funckciók és fejlesztések - Changelog</td>
+        </tr>
+        <tr>
+            <td class="felsorol">További parancsok és használatuk - Help</td>
+        </tr>
+        <tr>
+            <td class="felsorol utolso">Visszajelzés küldése - Feedback ● <a
+                    href="https://discord.gg/s8XtzBasQF">Support Szerver</a></td>
+        </tr>
+    </table>
 </body>
 </html>
