--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <td><img src="https://i.imgur.com/U2oddx6.gif" alt="Ban parancs működése"></td>
         </tr>
         <tr>
-            <td class="parancs">Ban ● Kick ● Warn ● Timeout ● Clear ● Lockdown</td>
+            <td class="parancs elso">Ban ● Kick ● Warn ● Timeout ● Clear ● Lockdown</td>
         </tr>
         <tr>
             <td class="parancs">Unban ● Removetimeout ● Unlockdown</td>
@@ -45,7 +45,7 @@
             <td><img src="https://i.imgur.com/Dd8qhTo.gif" alt="Play parancs működése"></td>
         </tr>
         <tr>
-            <td class="felsorol">Zenék indítása, keresése - Play ● Search</td>
+            <td class="felsorol elso">Zenék indítása, keresése - Play ● Search</td>
         </tr>
         <tr>
             <td class="felsorol">Ranghoz, csatornához kötés - DJRole ● Zenecsatorna</td>
@@ -67,7 +67,7 @@
             <td><img src="https://i.imgur.com/smM9Ftb.gif" alt="Egyedi parancsok hozzáadása"></td>
         </tr>
         <tr>
-            <td class="felsorol">Egyedi parancsok létrehozása - Customcommand</td>
+            <td class="felsorol elso">Egyedi parancsok létrehozása - Customcommand</td>
         </tr>
         <tr>
             <td class="felsorol">Felhasználók számlálása - Membercounter</td>
@@ -89,7 +89,7 @@
             <td><img src="https://i.imgur.com/vkpbGUo.gif" alt="Új prefix hozzáadása"></td>
         </tr>
         <tr>
-            <td class="felsorol">Prefix megváltoztatása - Prefix</td>
+            <td class="felsorol elso">Prefix megváltoztatása - Prefix</td>
         </tr>
         <tr>
             <td class="felsorol">Parancsok átnevezése - Alias</td>
@@ -111,7 +111,7 @@
             <td><img src="https://i.imgur.com/UWrnRDQ.gif" alt="Információk adott felhasználóról"></td>
         </tr>
         <tr>
-            <td class="felsorol">Információk a szerverről, felhasználókról - Serverinfo ● Userinfo</td>
+            <td class="felsorol elso">Információk a szerverről, felhasználókról - Serverinfo ● Userinfo</td>
         </tr>
         <tr>
             <td class="felsorol">Profilképek különböző felbontásokban - Avatar</td>
