--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <table class="mod">
         <th>Moderálás</th>
         <tr>
-            <td class="alcim">Egyszerűen kezelhető moderálási parancsok, korábbi eljárások mentése</td>
+            <td class="alcim">Korszerű moderációs parancsok, korábbi eljárások mentése</td>
         </tr>
         <tr>
             <td><img src="https://i.imgur.com/U2oddx6.gif" alt="Ban parancs működése"></td>
@@ -45,10 +45,10 @@
             <td><img src="https://i.imgur.com/Dd8qhTo.gif" alt="Play parancs működése"></td>
         </tr>
         <tr>
-            <td class="felsorol elso">Zenék indítása, keresése - Play ● Search</td>
+            <td class="felsorol elso">Zenék indítása, keresése | <p>Play ● Search</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Ranghoz, csatornához kötés - DJRole ● Zenecsatorna</td>
+            <td class="felsorol">Ranghoz, csatornához kötés | <p>DJRole ● Zenecsatorna</p></td>
         </tr>
         <tr>
             <td class="parancs">Seek ● Loop ● Pause/Resume ● Volume ● Lyrics ● Filter ● Stop</td>
@@ -67,16 +67,16 @@
             <td><img src="https://i.imgur.com/smM9Ftb.gif" alt="Egyedi parancsok hozzáadása"></td>
         </tr>
         <tr>
-            <td class="felsorol elso">Egyedi parancsok létrehozása - Customcommand</td>
+            <td class="felsorol elso">Egyedi parancsok létrehozása | <p>Customcommand</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Felhasználók számlálása - Membercounter</td>
+            <td class="felsorol">Felhasználók számlálása | <p>Membercounter</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Rangok automatikus adása - Autoroles</td>
+            <td class="felsorol">Rangok automatikus adása | <p>Autoroles</p></td>
         </tr>
         <tr>
-            <td class="felsorol utolso">Üdvözlő és Búcsúzó üzenet - Welcome ● Farewell</td>
+            <td class="felsorol utolso">Üdvözlő és Búcsúzó üzenet | <p>Welcome ● Farewell</p></td>
         </tr>
     </table>
 
@@ -89,58 +89,53 @@
             <td><img src="https://i.imgur.com/vkpbGUo.gif" alt="Új prefix hozzáadása"></td>
         </tr>
         <tr>
-            <td class="felsorol elso">Prefix megváltoztatása - Prefix</td>
+            <td class="felsorol elso">Prefix megváltoztatása | <p>Prefix</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Parancsok átnevezése - Alias</td>
+            <td class="felsorol">Parancsok átnevezése | <p>Alias</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Parancsok kikapcsolása - Toggle</td>
+            <td class="felsorol">Parancsok kikapcsolása | <p>Toggle</p></td>
         </tr>
         <tr>
-            <td class="felsorol utolso">Parancsok rangokhoz kötése - Permissions</td>
+            <td class="felsorol utolso">Parancsok rangokhoz kötése | <p>Permissions</p></td>
         </tr>
     </table>
 
     <table class="misc">
         <th>Ezenfelül</th>
         <tr>
-            <td class="alcim">További, mindenféle parancsok</td>
+            <td class="alcim">További parancsok és funkciók</td>
         </tr>
         <tr>
             <td><img src="https://i.imgur.com/UWrnRDQ.gif" alt="Információk adott felhasználóról"></td>
         </tr>
         <tr>
-            <td class="felsorol elso">Információk a szerverről, felhasználókról - Serverinfo ● Userinfo</td>
+            <td class="felsorol elso">Információk a szerverről, felhasználókról | <p>Serverinfo ● Userinfo</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Profilképek különböző felbontásokban - Avatar</td>
+            <td class="felsorol">Profilképek különböző felbontásokban | <p>Avatar</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Youtube videónézés és játékok indítása - Activities</td>
+            <td class="felsorol">Youtube videónézés és játékok indítása <p>Activities</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Szavazások létrehozása - Szavazás</td>
+            <td class="felsorol">Szavazások létrehozása <p>Szavazás</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Szövegek átalakítása - ASCII ● Emojify ● Replace</td>
+            <td class="felsorol">Nekos.best integrálás | <p>Nekosbest</p></td>
         </tr>
         <tr>
-            <td class="felsorol utolso">És további hasonló parancsok!</td>
+            <td class="felsorol utolso">További parancsok és használatuk | <p>Help</p></td>
         </tr>
     </table>
 
     <table>
-        <th>Egyéb tudnivalók</th>
         <tr>
-            <td class="felsorol">Rendszeres frissítések, új funckciók és fejlesztések - Changelog</td>
+            <td class="felsorol">Rendszeres frissítések, új funkciók és fejlesztések | <p>Changelog</p></td>
         </tr>
         <tr>
-            <td class="felsorol">További parancsok és használatuk - Help</td>
-        </tr>
-        <tr>
-            <td class="felsorol utolso">Visszajelzés küldése - Feedback ● <a
-                    href="https://discord.gg/s8XtzBasQF">Support Szerver</a></td>
+            <td class="felsorol">Visszajelzés küldése | <p>Feedback ● <a href="https://discord.gg/s8XtzBasQF">Support Szerver</a></p></td>
         </tr>
     </table>
 </body>
