--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             <td class="felsorol">Profilképek különböző felbontásokban | <p>Avatar</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Youtube videónézés és játékok indítása <p>Activities</p></td>
+            <td class="felsorol">Youtube videónézés és játékok indítása | <p>Activities</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Szavazások létrehozása <p>Szavazás</p></td>
+            <td class="felsorol">Szavazások létrehozása | <p>Szavazás</p></td>
         </tr>
         <tr>
             <td class="felsorol">Nekos.best integrálás | <p>Nekosbest</p></td>
