--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button onclick="topFunction()" id="topButton" title="Fel">Fel</button> 
     <div class="tab">
         <img class="logo" src="https://cdn.discordapp.com/attachments/1000529467262914600/1048656664997400687/011a7bc2fcfc7cc84e21067c32f5b894.png" title="Vissza a főoldalra" alt="Vissza a főoldalra" onclick="openTab(event, 'main')" id="defaultOpen">
+        <button onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands';" class="tablinks invite">Meghívás</a></button>
         <button class="tablinks" onclick="openTab(event, 'Parancsok')">Parancsok</button>
     </div>
       
@@ -135,7 +136,7 @@
         <p>Ezek azok.</p>
     </div>
 
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="./index.js"></script>
 </head>
 
 <body>
@@ -144,7 +145,7 @@
             <td class="felsorol">Rendszeres frissítések, új funkciók és fejlesztések | <p>Changelog</p></td>
         </tr>
         <tr>
-            <td class="felsorol">Visszajelzés küldése | <p>Feedback ● <a href="https://discord.gg/s8XtzBasQF">Support Szerver</a></p></td>
+            <td class="felsorol"><p><a href="https://discord.gg/s8XtzBasQF">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs">Github</a></p></td>
         </tr>
         <tr>
             <td><a href="https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands"> <img class="icon" src="https://cdn.discordapp.com/attachments/1000529467262914600/1048656664997400687/011a7bc2fcfc7cc84e21067c32f5b894.png" alt=""</a></td>
