--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <button onclick="topFunction()" id="topButton" title="Fel">Fel</button> 
     <div class="tab">
-        <img class="logo" src="https://cdn.discordapp.com/attachments/1000529467262914600/1048656664997400687/011a7bc2fcfc7cc84e21067c32f5b894.png" title="Vissza a főoldalra" alt="Vissza a főoldalra" onclick="openTab(event, 'main')" id="defaultOpen">
-        <button onclick="location.href='https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands';" class="tablinks invite">Meghívás</a></button>
+        <img class="tablinks logo" src="https://cdn.discordapp.com/attachments/1000529467262914600/1048656664997400687/011a7bc2fcfc7cc84e21067c32f5b894.png" title="Vissza a főoldalra" alt="Vissza a főoldalra" onclick="openTab(event, 'main')" id="defaultOpen">
+        <button  class="tablinks" onclick="window.open('https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands', '_blank')">Meghívás</a></button>
         <button class="tablinks" onclick="openTab(event, 'Parancsok')">Parancsok</button>
     </div>
       
