--- a/index.html
+++ b/index.html
@@ -142,13 +142,16 @@
 <body>
     <table class="utolso">
         <tr>
+            <td class="felsorol"><a href="https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands"> <img class="icon" src="https://cdn.discordapp.com/attachments/1000529467262914600/1048656664997400687/011a7bc2fcfc7cc84e21067c32f5b894.png" alt=""</a></td>
+        </tr>
+        <tr>
+            <td class="felsorol verzio">sasOS <p id="message">...</p></td>
+        </tr>
+        <tr>
             <td class="felsorol">Rendszeres frissítések, új funkciók és fejlesztések | <p>Changelog</p></td>
         </tr>
         <tr>
-            <td class="felsorol"><p><a href="https://discord.gg/s8XtzBasQF">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs">Github</a></p></td>
-        </tr>
-        <tr>
-            <td><a href="https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands"> <img class="icon" src="https://cdn.discordapp.com/attachments/1000529467262914600/1048656664997400687/011a7bc2fcfc7cc84e21067c32f5b894.png" alt=""</a></td>
+            <td class="felsorol"><p><a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a></p></td>
         </tr>
     </table>
 </body>
