--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <td class="felsorol">Rendszeres frissítések, új funkciók és fejlesztések | <p>Changelog</p></td>
         </tr>
         <tr>
-            <td class="felsorol"><p><a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a></p></td>
+            <td class="felsorol"><p><a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> | </p> <p class="verzio" id="message">...</p></td>
         </tr>
     </table>
 </body>
