--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
 
     <script type="text/javascript" src="./index.js"></script>
 </head>
-<body>
-    <table class="utolso">
+<footer>
+    <hr>
+    <table class="footer">
         <tr>
             <td class="felsorol"><a href="https://discord.com/api/oauth2/authorize?client_id=742556187425505312&permissions=1099817020631&scope=bot%20applications.commands"> <img class="icon" src="https://cdn.discordapp.com/attachments/1000529467262914600/1048656664997400687/011a7bc2fcfc7cc84e21067c32f5b894.png" alt=""</a></td>
         </tr>
@@ -150,5 +151,5 @@
             <td class="felsorol"><p><a href="https://discord.gg/s8XtzBasQF" target="_blank">Support Szerver</a> | <a href="https://github.com/sassvagyok/sasOS-docs" target="_blank">Github</a> | </p> <p class="verzio" id="message">...</p></td>
         </tr>
     </table>
-</body>
+</footer>
 </html>
